--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html>
 <head>
@@ -54,7 +53,7 @@
 		
 	</p>
 
-	<small>Плейсхолдер.</a></small>
+	<small>Плейсхолдер!</a></small>
 
 </div>
 
