--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@
 <!-- swap out for information about yourself -->
 <div id="about"> 
 
-	<h2>Привет</h2>
-	<p>Меня зовут Женек. Пока все.</p>
+	<h2>Привет!</h2>
+	<p>И пока!</p>
 
-	<h2>Где я есть</h2>
+	<h2>Где я</h2>
 	<p>
-		<a href="http://lnlsl.ru">Tumblr</a><br />
-		<a href="http://twitter.com/lnlsl">Twitter</a><br />
-		<a href="http://last.fm/user/EvGen1us">Last.fm</a><br />
-		<a href="http://steamcommunity.com/id/amime/">Steam</a><br />
-		<a href="http://instagram.com/lnly_soul">Instagram</a><br />
+		<a href="http://lnlsl.ru">Tmblr</a><br />
+		<a href="http://twitter.com/lnlsl">Twttr</a><br />
+		<a href="http://last.fm/user/EvGen1us">Lst.fm</a><br />
+		<a href="http://steamcommunity.com/id/amime/">Stam</a><br />
+		<a href="http://instagram.com/lnly_soul">Instgrm</a><br />
 		
 	</p>
 
