--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 		<a href="http://lnlsl.ru">Tmblr</a><br />
 		<a href="http://twitter.com/lnlsl">Twttr</a><br />
 		<a href="http://last.fm/user/EvGen1us">Lst.fm</a><br />
-		<a href="http://steamcommunity.com/id/amime/">Stam</a><br />
+		<a href="http://steamcommunity.com/id/amime/">Stm</a><br />
 		<a href="http://instagram.com/lnly_soul">Instgrm</a><br />
 		
 	</p>
