--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 		<a href="http://twitter.com/lnlsl">Twttr</a><br />
 		<a href="http://last.fm/user/EvGen1us">Lst.fm</a><br />
 		<a href="http://steamcommunity.com/id/amime/">Stm</a><br />
-		<a href="http://instagram.com/lnly_soul">Instgrm</a><br />
+		<a href="http://instagram.com/lnly_soul">Nstgrm</a><br />
 		
 	</p>
 
