--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<![endif]-->	
 	<style>
 		* { padding: 0; margin: 0; }
-		body { background-color: #333; margin-bottom: 50px; }
+		body background: #c7b39b url(images/bg.jpg);
 		h2 { color: rgba(255,255,255,0.2); font-family: "freight-micro-pro", Helvetica; font-size: 34px; }
 		p { color: #fff; font-family: "freight-micro-pro", Helvetica; font-size: 22px; line-height: 32px; margin-bottom: 22px; -webkit-font-smoothing: antialiased; }
 		a { color: #fff; font-weight: 600; text-decoration: none; padding-bottom: -1px !important; border-bottom: 3px solid rgba(255,255,255,0.3); }
