--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 $(function(){
      $(window).resize(function(){
          if($(this).width() >= 767){
-             $.backstretch("bg1.jpg", {speed: 150});
+             $.backstretch("bg1.JPG", {speed: 150});
          }
       })
       .resize();//trigger resize on page load
