--- a/index.html
+++ b/index.html
@@ -41,19 +41,20 @@
 <div id="about"> 
 
 	<h2>Привет!</h2>
-	<p>И пока!</p>
+	<p>Как твои дела?</p>
 
-	<h2>Где я</h2>
+	<h2>Среда обитания</h2></h2>
 	<p>
 		<a href="http://lnlsl.ru">Tmblr</a><br />
 		<a href="http://twitter.com/lnlsl">Twttr</a><br />
 		<a href="http://last.fm/user/EvGen1us">Lst.fm</a><br />
 		<a href="http://steamcommunity.com/id/amime/">Stm</a><br />
 		<a href="http://instagram.com/lnly_soul">Nstgrm</a><br />
+		<a href="http://myanimelist.net/lnlsl">Mnmlst</a><br />
 		
 	</p>
 
-	<small>Плейсхолдер!</a></small>
+	<small>:*</a></small>
 
 </div>
 
