--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		<a href="http://last.fm/user/EvGen1us">Lst.fm</a><br />
 		<a href="http://steamcommunity.com/id/amime/">Stm</a><br />
 		<a href="http://instagram.com/lnly_soul">Nstgrm</a><br />
-		<a href="http://myanimelist.net/lnlsl">Mnmlst</a><br />
+		<a href="http://myanimelist.net/profile/lnlsl">Mnmlst</a><br />
 		
 	</p>
 
