--- a/index2.html
+++ b/index2.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -99,7 +98,7 @@
         <p class="contactheader">Internet: </p>
         <div class="contactlist">
           <p class="item">GitHub — <span id="link"><a href="https://github.com/Kern0">@Kern0</a></span></p>
-          <p class="item">Twitter — <span id="link"><a href="https://twitter.com/Kern_0">@Kern_0</a></span></p>
+          <p class="item">Twitter — <span id="link"><a href="https://twitter.com/lnlsl">@lnlsl</a></span></p>
           <p class="item">VK — <span id="link"><a href="https://vk.com/Kernel0">@Kernel0</a></span></p>
         </div>
         <p class="contactheader">Hyperboria: </p>
