--- a/index2.html
+++ b/index2.html
@@ -2,10 +2,10 @@
 <html lang="en">
 
 <head>
-  <title>K</title>
+  <title>lnlsl</title>
   <meta http-equiv="content-type" content="text/html;charset=utf-8" />
-  <meta name="description" content="Arseniy Maximov aka Kërnel — Russian geek-student from Moscow." />
-  <meta name="author" content="Kërnel"/>
+  <meta name="description" content="Eugene Prosvirkin." />
+  <meta name="author" content="lnlsl"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
   <link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
   <style>
@@ -85,23 +85,21 @@
   <div id="sidebar">
     <div id="content">
       <div id="titlebox">
-        <p id="title">test</p>
-        <p id="subtitle">test</p>
-        <p id="description">test</p>
+        <p id="title">lnlsl</p>
+        <p id="subtitle">lnlsl</p>
+        <p id="description">lnlsl</p>
       </div>
       <div id="contact">
         <p class="contactheader">Contacts:</p>
         <div class="contactlist">
-          <p class="item">Email — <span id="link">localhost@kern0.ru</span></p>
-          <p class="item">Jabber — <span id="link">kern0@rows.io</span></p>
+          <p class="item">Email — <span id="link">prosvirkin@me.com</span></p>
         </div>
         <p class="contactheader">Internet: </p>
         <div class="contactlist">
-          <p class="item">GitHub — <span id="link"><a href="https://github.com/Kern0">@Kern0</a></span></p>
           <p class="item">Twitter — <span id="link"><a href="https://twitter.com/lnlsl">@lnlsl</a></span></p>
-          <p class="item">VK — <span id="link"><a href="https://vk.com/Kernel0">@Kernel0</a></span></p>
+          <p class="item">Tumblr — <span id="link"><a href="https://amime.tumblr.com">lnlsl</a></span></p>
         </div>
-        <p class="contactheader">Hyperboria: </p>
+        <p class="contactheader">etc: </p>
         <div class="contactlist">
           <p class="item">Socialnode — <span id="link"><a href="http://socialno.de/Kern0">@Kern0</a></span></p>
           <p class="item">IRC — <span id="link">Kern0 at <a href="ttps://wiki.projectmeshnet.org/HypeIRC">HypeIRC</a></span></p>
