--- a/index2.html
+++ b/index2.html
@@ -97,7 +97,7 @@
         <p class="contactheader">Internet: </p>
         <div class="contactlist">
           <p class="item">Twitter — <span id="link"><a href="https://twitter.com/lnlsl">@lnlsl</a></span></p>
-          <p class="item">Tumblr — <span id="link"><a href="https://amime.tumblr.com">lnlsl</a></span></p>
+          <p class="item">Tumblr — <span id="link"><a href="https://lnlsl.tumblr.com">lnlsl</a></span></p>
         </div>
         <p class="contactheader">etc: </p>
         <div class="contactlist">
