--- a/index2.html
+++ b/index2.html
@@ -85,9 +85,9 @@
   <div id="sidebar">
     <div id="content">
       <div id="titlebox">
-        <p id="title">lnlsl</p>
-        <p id="subtitle">lnlsl</p>
-        <p id="description">lnlsl</p>
+        <p id="title">Ya</p>
+        <p id="subtitle">Ebal</p>
+        <p id="description">Tvoyu Mat</p>
       </div>
       <div id="contact">
         <p class="contactheader">Contacts:</p>
@@ -101,8 +101,8 @@
         </div>
         <p class="contactheader">etc: </p>
         <div class="contactlist">
-          <p class="item">Socialnode — <span id="link"><a href="http://socialno.de/Kern0">@Kern0</a></span></p>
-          <p class="item">IRC — <span id="link">Kern0 at <a href="ttps://wiki.projectmeshnet.org/HypeIRC">HypeIRC</a></span></p>
+          <p class="item">Steam — <span id="link"><a href="http://steamcommunity.com/id/amime">am i me</a></span></p>
+          <p class="item">Myanimelist — <span id="link">Kern0 at <a href="http://myanimelist.net/list/lnlsl">lnlsl</a></span></p>
         </div>
       </div>
     </div>
