--- a/index2.html
+++ b/index2.html
@@ -102,7 +102,7 @@
         <p class="contactheader">etc: </p>
         <div class="contactlist">
           <p class="item">Steam — <span id="link"><a href="http://steamcommunity.com/id/amime">am i me</a></span></p>
-          <p class="item">Myanimelist — <span id="link">Kern0 at <a href="http://myanimelist.net/list/lnlsl">lnlsl</a></span></p>
+          <p class="item">Myanimelist — <span id="link"><a href="http://myanimelist.net/list/lnlsl">lnlsl</a></span></p>
         </div>
       </div>
     </div>
