--- a/index2.html
+++ b/index2.html
@@ -96,12 +96,12 @@
         </div>
         <p class="contactheader">Internet: </p>
         <div class="contactlist">
-          <p class="item">Twitter — <span id="link"><a href="https://twitter.com/lnlsl">@lnlsl</a></span></p>
-          <p class="item">Tumblr — <span id="link"><a href="https://lnlsl.tumblr.com">lnlsl</a></span></p>
+          <p class="item"><span id="link"><a href="https://twitter.com/lnlsl">@lnlsl</a></span></p>
+          <p class="item"><span id="link"><a href="https://lnlsl.tumblr.com">Blog</a></span></p>
         </div>
         <p class="contactheader">etc: </p>
         <div class="contactlist">
-          <p class="item">Steam — <span id="link"><a href="http://steamcommunity.com/id/amime">am i me</a></span></p>
+          <p class="item"><span id="link"><a href="http://steamcommunity.com/id/amime">Steam</a></span></p>
           <p class="item">Myanimelist — <span id="link"><a href="http://myanimelist.net/list/lnlsl">lnlsl</a></span></p>
         </div>
       </div>
