--- a/index.html
+++ b/index.html
@@ -1,76 +1,119 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
-  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-	<title>i am me</title>
-	<link rel="Shortcut Icon" href="/favicon.ico" type="image/x-icon" />
-	<meta http-equiv="pragma" content="no-cache" />
-	<meta name="robots" content="all" />
-	<meta name="MSSmartTagsPreventParsing" content="true" />
-	<meta http-equiv="imagetoolbar" content="false" />
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<!--[if lt IE 9]>
-	<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-	<![endif]-->	
-	<style>
-		* { padding: 0; margin: 0; }
-		body { background-color: #333; margin-bottom: 50px; }
-		h2 { color: rgba(255,255,255,0.2); font-family: "freight-micro-pro", Helvetica; font-size: 34px; }
-		p { color: #fff; font-family: "freight-micro-pro", Helvetica; font-size: 22px; line-height: 32px; margin-bottom: 22px; -webkit-font-smoothing: antialiased; }
-		a { color: #fff; font-weight: 600; text-decoration: none; padding-bottom: -1px !important; border-bottom: 3px solid rgba(255,255,255,0.3); }
-		strong { font-weight: 600; }
-		a:hover { color: #fff; border-bottom: 3px solid rgba(255,255,255,1); }
-		#monogram { width: 50px; padding: 50px 0 0 0; margin: 0 auto 0 50px; }
-		#about { width: 450px; margin: 50px auto 0 50px !important; }
-		.initials { opacity: 0.8; }
-		small { color: #fff; font-family: "freight-micro-pro", Helvetica; font-size: 14px; -webkit-font-smoothing: antialiased; }
-		@media (max-width: 767px) { 
-			#monogram { position: relative; width: auto; padding: 20px; margin: 0; }
-			#about { position: relative; width: auto; padding: 20px; margin: 0 !important; }
-			.backstretch { opacity: 0.2; }
-		}
-	</style>
-	<script type="text/javascript" src="//use.typekit.net/vct4rfm.js"></script>
-	<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
-</head>	
-    
+  <title>lnlsl</title>
+  <meta http-equiv="content-type" content="text/html;charset=utf-8" />
+  <meta name="description" content="Eugene Prosvirkin." />
+  <meta name="author" content="lnlsl"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
+  <link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
+  <style>
+  body {
+    background:rgb(80,82,86) url(background.jpg) no-repeat center center fixed; 
+      -webkit-background-size: cover;
+      -moz-background-size: cover;
+      -o-background-size: cover;
+      background-size: cover;
+    font-family: "PT sans";
+    color: rgb(255,255,255);
+    font-weight: bold;
+    }
+  a {
+      text-decoration: none;
+      color: rgb(169,172,175);
+    }
+  #link {
+    color: rgb(169,172,175);
+    }
+  #sidebar {
+    width: 300px;
+    height: 100%;
+    background: rgb(43, 44, 46);
+    min-height: 560px;
+    position: absolute;
+    right: 0px;
+    top: 0px;
+    }
+  #content {
+    position: relative;
+    height: 620px;
+    overflow: visible;
+    overflow-x: hidden;
+    overflow-y: visible;
+    background: rgb(43, 44, 46);
+    }
+  #titlebox {
+    height: 174px;
+    padding-left: 26px;
+    padding-right: 16px;
+    -moz-box-sizing: border-box;
+    }
+  #title {
+    font-size: 50px;
+    margin-bottom: 0px;
+    }
+  #subtitle {
+    font-size: 13px;
+    color: rgb(156,159,163);
+    margin-bottom: 0px;
+    }
+  #description {
+    color: rgb(255,255,255);
+    }
+  .contactheader {
+    font-size: 20px;
+    margin-bottom: 10px;
+    }
+  #contact {
+    padding-left: 26px;
+    padding-right: 16px;
+    }
+  .contactlist {
+    padding-left: 13px;
+    padding-right: 16px;
+    font-size: 
+    }
+  .item {
+    margin-top: 5px;
+    margin-bottom: 0px;
+    }
+  a:hover {
+  color: #39f;
+  	}
+    </style>
+</head>
+
 <body>
+  <div id="sidebar">
+    <div id="content">
+      <div id="titlebox">
+        <p id="title">Eugene P.</p>
+        <p id="subtitle"></p>
+        <p id="description">Professional idiot.</p>
+      </div>
+      <div id="contact">
+        <p class="contactheader">Contacts:</p>
+        <div class="contactlist">
+          <p class="item"><span id="link">eprosvirkin@gmail.com</span></p>
+          <address>
+          </div>
+        <p class="contactheader">Internets: </p>
+        <div class="contactlist">
+          <p class="item"><span id="link"><a href="https://vk.com/prosvirkin">vk</a></span></p>
+          <p class="item"><span id="link"><a href="https://twitter.com/lnlsl">twitter</a></span></p>
+          <p class="item"><span id="link"><a href="https://lnlsl.tumblr.com">tumblr</a></span></p>
+        </div>
+        <p class="contactheader">etc: </p>
+        <div class="contactlist">
+          <p class="item"><span id="link"><a href="http://steamcommunity.com/id/amime">steam</a></span></p>
+          <p class="item"><span id="link"><a href="http://myanimelist.net/list/lnlsl">mal</a></span></p>
+          <p class="item"><span id="link"><a href="http://last.fm/user/EvGen1us">last.fm</a></span></p>
+          <p class="item"><span id="link"><a href="http://instagram.com/lnly_soul">instagram</a></span></p>
+        </div>
+      </div>
+    </div>
+  </div>
+</body>
 
-
-<!-- swap out for information about yourself -->
-<div id="about"> 
-
-	<h2>Привет!</h2>
-	<p>Как твои дела?</p>
-
-	<h2>Среда обитания</h2></h2>
-	<p>
-		<a href="http://lnlsl.ru">Tmblr</a><br />
-		<a href="http://twitter.com/lnlsl">Twttr</a><br />
-		<a href="http://last.fm/user/EvGen1us">Lst.fm</a><br />
-		<a href="http://steamcommunity.com/id/amime/">Stm</a><br />
-		<a href="http://instagram.com/lnly_soul">Nstgrm</a><br />
-		<a href="http://myanimelist.net/profile/lnlsl">Mnmlst</a><br />
-		
-	</p>
-
-	<small>:*</a></small>
-
-</div>
-
-<!--include jquery & backstretch-->
-<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-<script type="text/javascript" src="jquery.backstretch.min.js"></script>
-<script type="text/javascript">
-$(function(){
-     $(window).resize(function(){
-         if($(this).width() >= 767){
-             $.backstretch("bg1.JPG", {speed: 150});
-         }
-      })
-      .resize();//trigger resize on page load
-});
-</script>
-
-</body>	
 </html>
