--- a/index.html
+++ b/index.html
@@ -93,12 +93,12 @@
         <p id="description">Professional idiot.</p>
       </div>
       <div id="contact">
-        <p class="contactheader">Contacts:</p>
+        <p class="contactheader">сontact:</p>
         <div class="contactlist">
           <p class="item"><span id="link">eprosvirkin@gmail.com</span></p>
           <address>
           </div>
-        <p class="contactheader">Internets: </p>
+        <p class="contactheader">internets: </p>
         <div class="contactlist">
           <p class="item"><span id="link"><a href="https://vk.com/prosvirkin">vk</a></span></p>
           <p class="item"><span id="link"><a href="https://twitter.com/lnlsl">twitter</a></span></p>
