--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <div id="titlebox">
         <p id="title">Eugene P.</p>
         <p id="subtitle"></p>
-        <p id="description">Professional idiot.</p>
+        <p id="description">Professional idiot. Logistics and SCM. Wannabe coder.</p>
       </div>
       <div id="contact">
         <p class="contactheader">сontact:</p>
