--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <p id="title">Eugene P.</p>
         <p id="subtitle"></p>
         <p id="description">Professional idiot</p>
-        <p id="description">Logistics and SCM</p>
+        <p id="description">Logistics and SCM1</p>
         <p id="description">Wannabe coder</p>
       </div>
       <div id="contact">
