--- a/index.html
+++ b/index.html
@@ -89,8 +89,7 @@
     <div id="content">
       <div id="titlebox">
         <p id="title">Eugene P.</p>
-        <p id="subtitle"></p>
-        <p id="description">Professional idiot</p>
+        <p id="subtitle">professional idiot</p>
         <p id="description">Logistics and SCM1</p>
         <p id="description">Wannabe coder</p>
       </div>
