--- a/index.html
+++ b/index.html
@@ -89,9 +89,8 @@
     <div id="content">
       <div id="titlebox">
         <p id="title">Eugene P.</p>
-        <p id="subtitle">professional idiot</p>
-        <p id="description">Logistics and SCM1</p>
-        <p id="description">Wannabe coder</p>
+        <p id="subtitle"></p>
+        <p id="description">Professional idiot</p>
       </div>
       <div id="contact">
         <p class="contactheader">сontact:</p>
