--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <div class="contactlist">
           <p class="item"><span id="link"><a href="https://vk.com/prosvirkin">vk</a></span></p>
           <p class="item"><span id="link"><a href="https://twitter.com/lnlsl">twitter</a></span></p>
-          <p class="item"><span id="link"><a href="https://lnlsl.tumblr.com">tumblr</a></span></p>
+          <p class="item"><span id="link"><a href="http://lnlsl.ru">blog</a></span></p>
         </div>
         <p class="contactheader">etc: </p>
         <div class="contactlist">
