--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <p class="contactheader">etc: </p>
         <div class="contactlist">
           <p class="item"><span id="link"><a href="http://steamcommunity.com/id/amime">steam</a></span></p>
-          <p class="item"><span id="link"><a href="http://myanimelist.net/list/lnlsl">mal</a></span></p>
+          <p class="item"><span id="link"><a href="http://myanimelist.net/animelist/lnlsl">mal</a></span></p>
           <p class="item"><span id="link"><a href="http://last.fm/user/EvGen1us">last.fm</a></span></p>
           <p class="item"><span id="link"><a href="http://instagram.com/lnly_soul">instagram</a></span></p>
         </div>
