--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <div id="content">
       <div id="titlebox">
         <p id="title">Eugene P.</p>
-        <p id="subtitle"></p>
+        <p id="subtitle">St.Petersburg, Russia</p>
         <p id="description">Professional idiot</p>
       </div>
       <div id="contact">
